--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
     <div class="row justify-content-center">
     <!-- Caixa 7 -->
     <div class="col-md-4 text-center">
-      <div class="icon-circle"><img src="icon7.png" alt=""></div>
+      <div class="icon-circle">📑</div>
       <h5>7. Anotação de Variantes</h5>
       <p>Enriquecimento funcional das variantes.</p>
     </div>
 
     <!-- Caixa 8 -->
     <div class="col-md-4 text-center">
-      <div class="icon-circle"><img src="icon8.png" alt=""></div>
+      <div class="icon-circle">📊</div>
       <h5>8. Análises</h5>
       <p>Exploração estatística e interpretação biológica dos resultados.</p>
     </div>
@@ -152,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
