--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conteúdo</title>
+  <title>Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -131,7 +131,7 @@
         <h5><a href="variantes.html" class="text-decoration-none">6. Chamada de Variantes</a></h5>
         <p>Identificação de SNVs e indels nas amostras.</p>
       </div>
-    </div>
+    </div><br>
     
     <div class="row justify-content-center">
     <!-- Caixa 7 -->
@@ -152,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
