--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
         <h5><a href="variantes.html" class="text-decoration-none">6. Chamada de Variantes</a></h5>
         <p>Identificação de SNVs e indels nas amostras.</p>
       </div>
-    </div><br>
+    </div>
     
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-5">
     <!-- Caixa 7 -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">📑</div>
@@ -152,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
