--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="col-md-4 text-center">
         <div class="step-card">
           <div class="icon-circle">📑</div>
-          <h5>7. Anotação de Variantes</h5>
+          <h5><a href="anotacao.html">7. Anotação de Variantes</a></h5>
           <p>Enriquecimento funcional das variantes.</p>
         </div>
       </div>
@@ -174,7 +174,7 @@
       <div class="col-md-4 text-center">
         <div class="step-card">
           <div class="icon-circle">📊</div>
-          <h5>8. Análises</h5>
+          <h5><a href="analise.html">8. Análises</a></h5>
           <p>Exploração estatística e interpretação biológica dos resultados.</p>
         </div>
       </div>
@@ -182,6 +182,7 @@
   </section>
 </body>
 </html>
+
 
 
 
