--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
   <!-- Navbar centralizada -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container justify-content-center">
+      <!-- Botão hamburguer (visível em telas pequenas) -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
@@ -182,6 +187,7 @@
   </section>
 </body>
 </html>
+
 
 
 
