--- a/autores.html
+++ b/autores.html
@@ -17,6 +17,10 @@
   <!-- Navbar centralizada -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container justify-content-center">
+      <!-- Botão hamburguer (visível em telas pequenas) -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -37,6 +41,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
