--- a/praticas.html
+++ b/praticas.html
@@ -80,6 +80,10 @@
   <!-- Navbar centralizada -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container justify-content-center">
+      <!-- Botão hamburguer (visível em telas pequenas) -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -346,6 +350,7 @@
 
 </body>
 </html>
+
 
 
 
