--- a/autores.html
+++ b/autores.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Autores</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style> body { padding-top: 70px; } 
       /* Item ativo (página atual) */
     .nav-link.active {
@@ -43,6 +44,7 @@
 
 </body>
 </html>
+
 
 
 
