--- a/praticas.html
+++ b/praticas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Práticas</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       padding-top: 70px;
@@ -349,6 +349,7 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
