--- a/referencia.html
+++ b/referencia.html
@@ -5,8 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Referências</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style> body { padding-top: 70px; } 
-      /* Item ativo (página atual) */
+  <style>
+    body {
+      padding-top: 70px;
+      font-family: "Inter", sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    /* Navbar */
+    .nav-link {
+      font-weight: 500;
+      margin: 0 1rem;
+      color: #333;
+      transition: color 0.2s, border-bottom 0.2s;
+    }
+
+    .nav-link:hover {
+      color: #007bff;
+    }
+
     .nav-link.active {
       color: #007bff;
       border-bottom: 2px solid #007bff;
@@ -16,9 +33,9 @@
 <body>
 
   <!-- Navbar centralizada -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container justify-content-center">
-      <!-- Botão hamburguer (visível em telas pequenas) -->
+      <!-- Botão hamburguer -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -54,20 +71,9 @@
       <li><a href="https://www.ncbi.nlm.nih.gov/geo/">GEO</a></li>
     </ul>
   </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
