--- a/autores.html
+++ b/autores.html
@@ -5,19 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Autores</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style> body { padding-top: 70px; } 
-      /* Item ativo (página atual) */
+  <style>
+    body {
+      padding-top: 70px;
+      font-family: "Inter", sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    /* Navbar */
+    .nav-link {
+      font-weight: 500;
+      margin: 0 1rem;
+      color: #333;
+      transition: color 0.2s, border-bottom 0.2s;
+    }
+
+    .nav-link:hover {
+      color: #007bff;
+    }
+
     .nav-link.active {
       color: #007bff;
       border-bottom: 2px solid #007bff;
+    }
   </style>
 </head>
 <body>
-  
+
   <!-- Navbar centralizada -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container justify-content-center">
-      <!-- Botão hamburguer (visível em telas pequenas) -->
+      <!-- Botão hamburguer -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,8 +43,8 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
-          <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
-          <li class="nav-item"><a class="nav-link active" href="autores.html">Autores</a></li>
+          <li class="nav-item"><a class="nav-link active" href="referencia.html">Referências</a></li>
+          <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
         </ul>
       </div>
     </div>
@@ -44,6 +62,7 @@
 
 </body>
 </html>
+
 
 
 
