--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #fff;
-      color: #222;
+      padding-top: 70px;
       font-family: "Inter", sans-serif;
+      background-color: #f8f9fa;
     }
 
     h2 {
@@ -191,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
