--- a/autores.html
+++ b/autores.html
@@ -43,8 +43,8 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
-          <li class="nav-item"><a class="nav-link active" href="referencia.html">Referências</a></li>
-          <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
+          <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
+          <li class="nav-item"><a class="nav-link active" href="autores.html">Autores</a></li>
         </ul>
       </div>
     </div>
@@ -62,6 +62,7 @@
 
 </body>
 </html>
+
 
 
 
