--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <body>
   <!-- Navbar centralizada -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container justify-content-center">
       <!-- Botão hamburguer (visível em telas pequenas) -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -191,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
