--- a/praticas.html
+++ b/praticas.html
@@ -29,7 +29,7 @@
       border-bottom: 2px solid #007bff;
     }
 
-    /* Acordeão */
+    /* Accordion */
     .accordion-button {
       background-color: #f8f9fa;
       color: #0d1b2a;
@@ -77,7 +77,6 @@
   <!-- Navbar centralizada -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container justify-content-center">
-      <!-- Botão hamburguer (visível em telas pequenas) -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -97,10 +96,11 @@
     <h1 class="fw-bold">Práticas</h1>
     <p class="text-secondary mb-4">Selecione uma prática abaixo para visualizar seu conteúdo.</p>
 
-    <!-- Accordion de práticas -->
+    <!-- Accordion único para todas as práticas -->
     <div class="accordion" id="accordionPraticas">
+
       <!-- Prática 1 -->
-      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica1">
+      <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapsePratica1"
@@ -111,17 +111,14 @@
         <div id="collapsePratica1" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Baixar os dados necessários para o projeto.</p>
-            <p>Nesta prática, os alunos deverão escolher o tema de estudo e buscar amostras em bases de dados para análise. Se atendem de selecionar dados de exoma!!</p>
-            <p>Alguns bancos de dados que podem ser utilizados: NCBI (National Center for Biotechnology Information), ENSEMBL, UCSC Genome Browser, TCGA (The Cancer Genome Atlas) e GEO (Gene Expression Omnibus). Links para os bancos se encontram na aba "Referências"</p>
+            <p>Os alunos deverão escolher o tema de estudo e buscar amostras em bases de dados de exoma.</p>
+            <p>Alguns bancos de dados: NCBI, ENSEMBL, UCSC Genome Browser, TCGA e GEO. Links estão na aba "Referências".</p>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- Accordion de práticas -->
-    <div class="accordion" id="accordionPraticas">
       <!-- Prática 2 -->
-      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica2">
+      <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapsePratica2"
@@ -132,16 +129,13 @@
         <div id="collapsePratica2" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar o controle de qualidade das amostras baixadas.</p>
-            <p>Nesta prática, os alunos deverão realizar o controle de qualidade com a ferramente FastQC. Para isso:</p>
+            <p>Os alunos deverão utilizar a ferramenta FastQC para avaliar a qualidade das amostras.</p>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- Accordion de práticas -->
-    <div class="accordion" id="accordionPraticas">
       <!-- Prática 3 -->
-      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica3">
+      <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapsePratica3"
@@ -151,17 +145,14 @@
         </h2>
         <div id="collapsePratica3" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
-            <p><strong>Objetivo:</strong> Realizar, caso necessário, a trimagem das amostras.</p>
-            <p>Nesta prática, os alunos deverão realizar...</p>
+            <p><strong>Objetivo:</strong> Realizar a trimagem das amostras, se necessário.</p>
+            <p>Os alunos deverão remover sequências de baixa qualidade e adaptadores.</p>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- Accordion de práticas -->
-    <div class="accordion" id="accordionPraticas">
       <!-- Prática 4 -->
-      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica4">
+      <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapsePratica4"
@@ -171,17 +162,13 @@
         </h2>
         <div id="collapsePratica4" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
-            <p><strong>Objetivo:</strong> Realizar o alinhamento dos amostras com o genoma de referência.</p>
-            <p>Nesta prática, os alunos deverão realizar...</p>
+            <p><strong>Objetivo:</strong> Realizar o alinhamento das amostras com o genoma de referência.</p>
           </div>
         </div>
       </div>
-    </div>
 
-      <!-- Accordion de práticas -->
-    <div class="accordion" id="accordionPraticas">
       <!-- Prática 5 -->
-      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica5">
+      <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapsePratica5"
@@ -191,17 +178,13 @@
         </h2>
         <div id="collapsePratica5" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
-            <p><strong>Objetivo:</strong> Realizar as boas práticas do GATK, antes de realizar a chamada de variantes.</p>
-            <p>Nesta prática, os alunos deverão realizar...</p>
+            <p><strong>Objetivo:</strong> Seguir as boas práticas do GATK antes da chamada de variantes.</p>
           </div>
         </div>
       </div>
-    </div>
-    
-    <!-- Accordion de práticas -->
-    <div class="accordion" id="accordionPraticas">
+
       <!-- Prática 6 -->
-      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica6">
+      <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapsePratica6"
@@ -211,17 +194,13 @@
         </h2>
         <div id="collapsePratica6" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
-            <p><strong>Objetivo:</strong> Realizar a chamada de variantes com a ferramenta Haplotypecaller do GATK.</p>
-            <p>Nesta prática, os alunos deverão realizar...</p>
+            <p><strong>Objetivo:</strong> Realizar a chamada de variantes com HaplotypeCaller do GATK.</p>
           </div>
         </div>
       </div>
-    </div>
 
-      <!-- Accordion de práticas -->
-    <div class="accordion" id="accordionPraticas">
       <!-- Prática 7 -->
-      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica7">
+      <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapsePratica7"
@@ -231,17 +210,13 @@
         </h2>
         <div id="collapsePratica7" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
-            <p><strong>Objetivo:</strong> Realizar anotação funcional das variantes.</p>
-            <p>Nesta prática, os alunos deverão realizar...:</p>
+            <p><strong>Objetivo:</strong> Realizar a anotação funcional das variantes.</p>
           </div>
         </div>
       </div>
-    </div>
 
-      <!-- Accordion de práticas -->
-    <div class="accordion" id="accordionPraticas">
       <!-- Prática 8 -->
-      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica8">
+      <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapsePratica8"
@@ -252,103 +227,32 @@
         <div id="collapsePratica8" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar análises a partir dos dados processados.</p>
-            <p>Nesta prática, os alunos deverão realizar...</p>
           </div>
         </div>
       </div>
+
     </div>
-  
   </section>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
   <script>
-    // Abre automaticamente a Prática 1 se vier do link com #pratica1
+    // Abre automaticamente a prática se houver hash na URL
     document.addEventListener("DOMContentLoaded", function () {
-      if (window.location.hash === "#pratica1") {
-        const targetCollapse = document.querySelector("#collapsePratica1");
-        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
-        // rola suavemente até a prática
-        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
-      }
-    });
-    
-    // Abre automaticamente a Prática 1 se vier do link com #pratica1
-    document.addEventListener("DOMContentLoaded", function () {
-      if (window.location.hash === "#pratica2") {
-        const targetCollapse = document.querySelector("#collapsePratica2");
-        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
-        // rola suavemente até a prática
-        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
-      }
-    });
-
-    // Abre automaticamente a Prática 1 se vier do link com #pratica1
-    document.addEventListener("DOMContentLoaded", function () {
-      if (window.location.hash === "#pratica3") {
-        const targetCollapse = document.querySelector("#collapsePratica3");
-        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
-        // rola suavemente até a prática
-        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
-      }
-    });
-
-    // Abre automaticamente a Prática 1 se vier do link com #pratica1
-    document.addEventListener("DOMContentLoaded", function () {
-      if (window.location.hash === "#pratica4") {
-        const targetCollapse = document.querySelector("#collapsePratica4");
-        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
-        // rola suavemente até a prática
-        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
-      }
-    });
-
-    // Abre automaticamente a Prática 1 se vier do link com #pratica1
-    document.addEventListener("DOMContentLoaded", function () {
-      if (window.location.hash === "#pratica5") {
-        const targetCollapse = document.querySelector("#collapsePratica5");
-        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
-        // rola suavemente até a prática
-        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
-      }
-    });
-
-    // Abre automaticamente a Prática 1 se vier do link com #pratica1
-    document.addEventListener("DOMContentLoaded", function () {
-      if (window.location.hash === "#pratica6") {
-        const targetCollapse = document.querySelector("#collapsePratica6");
-        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
-        // rola suavemente até a prática
-        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
-      }
-    });
-
-    // Abre automaticamente a Prática 1 se vier do link com #pratica1
-    document.addEventListener("DOMContentLoaded", function () {
-      if (window.location.hash === "#pratica7") {
-        const targetCollapse = document.querySelector("#collapsePratica7");
-        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
-        // rola suavemente até a prática
-        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
-      }
-    });
-
-    // Abre automaticamente a Prática 1 se vier do link com #pratica1
-    document.addEventListener("DOMContentLoaded", function () {
-      if (window.location.hash === "#pratica8") {
-        const targetCollapse = document.querySelector("#collapsePratica8");
-        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
-        // rola suavemente até a prática
-        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
+      const hash = window.location.hash;
+      if (hash) {
+        const target = document.querySelector(`#collapse${hash.replace("#pratica", "Pratica")}`);
+        if (target) {
+          const bsCollapse = new bootstrap.Collapse(target, { toggle: true });
+          target.scrollIntoView({ behavior: "smooth", block: "start" });
+        }
       }
     });
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
 </body>
 </html>
+
+
 
 
 
