--- a/trimagem.html
+++ b/trimagem.html
@@ -89,10 +89,10 @@
     <div class="card p-4">
       <div class="card-body">
         <h3 class="card-title">Ferramentas</h3>
-        <p class="card-text">
-          <ul><strong>Trim Galore:</strong> Ferramenta em Python baseada em Cutadapt e FastQC, usada para automatizar a trimagem e o controle de qualidade das leituras de sequenciamento. Geralmente utiliza o arquivo em formato FASTQ.</ul>
-          <ul><strong>Trimmomatic:</strong> Ferramenta em Java independente, usada para remover adaptadores e bases de baixa qualidade de forma flexível e configurável.</ul>
-        </p>
+        <ul class="card-text">
+          <li><strong>Trim Galore:</strong> Ferramenta em Python baseada em Cutadapt e FastQC, usada para automatizar a trimagem e o controle de qualidade das leituras de sequenciamento. Geralmente utiliza o arquivo em formato FASTQ.</li>
+          <li><strong>Trimmomatic:</strong> Ferramenta em Java independente, usada para remover adaptadores e bases de baixa qualidade de forma flexível e configurável.</li>
+        </ul>
       </div>
     </div>
     
