--- a/alinhamento.html
+++ b/alinhamento.html
@@ -90,7 +90,7 @@
       <div class="card-body">
         <h3 class="card-title">BWA-MEM</h3>
         <p class="card-text">
-          BWA-MEM é um algoritmo do BWA (Burrows-Wheeler Aligner) usado para alinhamento de leituras de DNA ou RNA contra um genoma de referência, eficiente para leituras longas e identificação de variantes genéticas. Ele produz arquivos SAM/BAM, que indicam onde cada leitura se alinha no genoma, incluindo inserções, deleções e mismatches.        
+          BWA-MEM é um algoritmo da ferramenta BWA (Burrows-Wheeler Aligner) usado para alinhamento de leituras de DNA ou RNA contra um genoma de referência, eficiente para leituras longas e identificação de variantes genéticas. Ele produz arquivos SAM/BAM, que indicam onde cada leitura se alinha no genoma, incluindo inserções, deleções e mismatches.        
         </p>
       </div>
     </div>
@@ -100,12 +100,12 @@
       <div class="card-body">
         <h3 class="card-title">Outras ferramentas:</h3>
           <ul class="card-text">
-            <strong>Bowtie/Bowtie2:</strong>
+            <li><strong>Bowtie/Bowtie2:</strong></li>
               <li>Ferramenta rápida e eficiente para alinhamento de leituras curtas.</li>
               <li>Bowtie2 suporta leituras mais longas e gaps.</li>
-           <strong>STAR (Spliced Transcripts Alignment to a Reference):</strong>
+           <li><strong>STAR (Spliced Transcripts Alignment to a Reference):</strong></li>
              <li>Especializada em RNA-Seq, reconhece splice junctions.</li>
-           <strong>Minimap2:</strong>
+           <li><strong>Minimap2:</strong></li>
             <li>Ótima para leituras longas (PacBio, Oxford Nanopore) e também suporta DNA e RNA.</li>
           </ul>
         </div>
