--- a/alinhamento.html
+++ b/alinhamento.html
@@ -101,7 +101,7 @@
         <h3 class="card-title">Outras ferramentas:</h3>
           <ul class="card-text">
             <li><strong>Bowtie/Bowtie2:</strong></li>
-              <li>Ferramenta rápida e eficiente para alinhamento de leituras curtas.</li>
+              <li><li>Ferramenta rápida e eficiente para alinhamento de leituras curtas.</li></li>
               <li>Bowtie2 suporta leituras mais longas e gaps.</li>
            <li><strong>STAR (Spliced Transcripts Alignment to a Reference):</strong></li>
              <li>Especializada em RNA-Seq, reconhece splice junctions.</li>
