--- a/alinhamento.html
+++ b/alinhamento.html
@@ -98,17 +98,28 @@
    <!-- Bloco MultiQC -->
     <div class="card p-4">
       <div class="card-body">
-        <h3 class="card-title">Outras ferramentas:</h3>
-          <ul class="card-text">
-            <li><strong>Bowtie/Bowtie2:</strong></li>
-              <li><li>Ferramenta rápida e eficiente para alinhamento de leituras curtas.</li></li>
-              <li>Bowtie2 suporta leituras mais longas e gaps.</li>
-           <li><strong>STAR (Spliced Transcripts Alignment to a Reference):</strong></li>
-             <li>Especializada em RNA-Seq, reconhece splice junctions.</li>
-           <li><strong>Minimap2:</strong></li>
+      <h3>Outras ferramentas:</h3>
+      <ul>
+        <li><strong>Bowtie/Bowtie2</strong>
+          <ul>
+            <li>Ferramenta rápida e eficiente para alinhamento de leituras curtas.</li>
+            <li>Bowtie2 suporta leituras mais longas e gaps.</li>
+          </ul>
+        </li>
+
+        <li><strong>STAR (Spliced Transcripts Alignment to a Reference)</strong>
+          <ul>
+            <li>Especializada em RNA-Seq, reconhece splice junctions.</li>
+          </ul>
+         </li>
+
+         <li><strong>Minimap2</strong>
+          <ul>
             <li>Ótima para leituras longas (PacBio, Oxford Nanopore) e também suporta DNA e RNA.</li>
           </ul>
-        </div>
+         </li>
+      </ul>
+     </div>
     </div>
         
     <!-- Caixa da Prática 2 -->
