--- a/alinhamento.html
+++ b/alinhamento.html
@@ -98,7 +98,7 @@
    <!-- Bloco MultiQC -->
     <div class="card p-4">
       <div class="card-body">
-      <h3>Outras ferramentas:</h3>
+      <h3 class="card-title">Outras ferramentas:</h3>
       <ul>
         <li><strong>Bowtie/Bowtie2</strong>
           <ul>
