--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="col-md-4 text-center">
         <div class="step-card">
           <div class="icon-circle">✅</div>
-          <h5><a href="variantes.html">5. Boas práticas</a></h5>
+          <h5><a href="bp.html">5. Boas práticas</a></h5>
           <p>Práticas aplicadas às amostras que asseguram a identificação precisa e confiável das variantes genéticas.</p>
         </div>
       </div>
@@ -191,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
