--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Desenvolvimento</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -96,8 +96,9 @@
     
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="desenvolvimento.html">Desenvolvimento</a></li>
+          <li class="nav-item"><a class="nav-link" href="praticas.html">Atividades</a></li>
           <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
           <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
         </ul>
@@ -191,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
