--- a/praticas.html
+++ b/praticas.html
@@ -83,7 +83,8 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="praticas.html">Práticas</a></li>
+          <li class="nav-item"><a class="nav-link" href="desenvolvimento.html">Desenvolvimento</a></li>
+          <li class="nav-item"><a class="nav-link active" href="praticas.html">Atividades</a></li>
           <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
           <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
         </ul>
@@ -93,22 +94,22 @@
 
   <!-- Seção principal -->
   <section class="container py-5">
-    <h1 class="fw-bold">Práticas</h1>
-    <p class="text-secondary mb-4">Selecione uma prática abaixo para visualizar seu conteúdo.</p>
+    <h1 class="fw-bold">Atividades</h1>
+    <p class="text-secondary mb-4">Selecione uma atividade abaixo para visualizar seu conteúdo.</p>
 
     <!-- Accordion único para todas as práticas -->
-    <div class="accordion" id="accordionPraticas">
+    <div class="accordion" id="accordionAtividades">
 
       <!-- Prática 1 -->
       <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapsePratica1"
-                  aria-expanded="false" aria-controls="collapsePratica1">
-            Prática 1 — Download dos dados
+                  data-bs-toggle="collapse" data-bs-target="#collapseAtividade1"
+                  aria-expanded="false" aria-controls="collapseAtividade1">
+            Atividade 1 — Download dos dados
           </button>
         </h2>
-        <div id="collapsePratica1" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+        <div id="collapseAtividade1" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Baixar os dados necessários para o projeto.</p>
             <p>Os alunos deverão escolher o tema de estudo e buscar amostras em bases de dados de exoma.</p>
@@ -121,12 +122,12 @@
       <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapsePratica2"
-                  aria-expanded="false" aria-controls="collapsePratica2">
-            Prática 2 — Controle de qualidade
+                  data-bs-toggle="collapse" data-bs-target="#collapseAtividade2"
+                  aria-expanded="false" aria-controls="collapseAtividade2">
+            Atividade 2 — Controle de qualidade
           </button>
         </h2>
-        <div id="collapsePratica2" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+        <div id="collapseAtividade2" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar o controle de qualidade das amostras baixadas.</p>
             <p>Os alunos deverão utilizar a ferramenta FastQC para avaliar a qualidade das amostras.</p>
@@ -138,12 +139,12 @@
       <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapsePratica3"
-                  aria-expanded="false" aria-controls="collapsePratica3">
-            Prática 3 — Trimagem
+                  data-bs-toggle="collapse" data-bs-target="#collapseAtividade3"
+                  aria-expanded="false" aria-controls="collapseAtividade3">
+            Atividade 3 — Trimagem
           </button>
         </h2>
-        <div id="collapsePratica3" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+        <div id="collapseAtividade3" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar a trimagem das amostras, se necessário.</p>
             <p>Os alunos deverão remover sequências de baixa qualidade e adaptadores.</p>
@@ -155,12 +156,12 @@
       <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapsePratica4"
-                  aria-expanded="false" aria-controls="collapsePratica4">
-            Prática 4 — Alinhamento
+                  data-bs-toggle="collapse" data-bs-target="#collapseAtividade4"
+                  aria-expanded="false" aria-controls="collapseAtividade4">
+            Atividade 4 — Alinhamento
           </button>
         </h2>
-        <div id="collapsePratica4" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+        <div id="collapseAtividade4" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar o alinhamento das amostras com o genoma de referência.</p>
           </div>
@@ -171,12 +172,12 @@
       <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapsePratica5"
-                  aria-expanded="false" aria-controls="collapsePratica5">
-            Prática 5 — Boas práticas GATK
+                  data-bs-toggle="collapse" data-bs-target="#collapseAtividade5"
+                  aria-expanded="false" aria-controls="collapseAtividade5">
+            Atividade 5 — Boas práticas GATK
           </button>
         </h2>
-        <div id="collapsePratica5" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+        <div id="collapseAtividade5" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Seguir as boas práticas do GATK antes da chamada de variantes.</p>
           </div>
@@ -187,12 +188,12 @@
       <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapsePratica6"
-                  aria-expanded="false" aria-controls="collapsePratica6">
-            Prática 6 — Chamada de variantes
+                  data-bs-toggle="collapse" data-bs-target="#collapseAtividade6"
+                  aria-expanded="false" aria-controls="collapseAtividade6">
+            Atividade 6 — Chamada de variantes
           </button>
         </h2>
-        <div id="collapsePratica6" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+        <div id="collapseAtividade6" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar a chamada de variantes com HaplotypeCaller do GATK.</p>
           </div>
@@ -203,12 +204,12 @@
       <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapsePratica7"
-                  aria-expanded="false" aria-controls="collapsePratica7">
-            Prática 7 — Anotação das variantes
+                  data-bs-toggle="collapse" data-bs-target="#collapseAtividade7"
+                  aria-expanded="false" aria-controls="collapseAtividade7">
+            Atividade 7 — Anotação das variantes
           </button>
         </h2>
-        <div id="collapsePratica7" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+        <div id="collapseAtividade7" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar a anotação funcional das variantes.</p>
           </div>
@@ -219,12 +220,12 @@
       <div class="accordion-item border-0 shadow-sm rounded-3">
         <h2 class="accordion-header">
           <button class="accordion-button fw-semibold collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapsePratica8"
-                  aria-expanded="false" aria-controls="collapsePratica8">
-            Prática 8 — Análises
+                  data-bs-toggle="collapse" data-bs-target="#collapseAtividade8"
+                  aria-expanded="false" aria-controls="collapseAtividade8">
+            Atividade 8 — Análises
           </button>
         </h2>
-        <div id="collapsePratica8" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+        <div id="collapseAtividade8" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar análises a partir dos dados processados.</p>
           </div>
@@ -241,7 +242,7 @@
     document.addEventListener("DOMContentLoaded", function () {
       const hash = window.location.hash;
       if (hash) {
-        const target = document.querySelector(`#collapse${hash.replace("#pratica", "Pratica")}`);
+        const target = document.querySelector(`#collapse${hash.replace("#atividade", "Atividade")}`);
         if (target) {
           const bsCollapse = new bootstrap.Collapse(target, { toggle: true });
           target.scrollIntoView({ behavior: "smooth", block: "start" });
@@ -251,6 +252,7 @@
   </script>
 </body>
 </html>
+
 
 
 
