--- a/autores.html
+++ b/autores.html
@@ -42,7 +42,8 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
+          <li class="nav-item"><a class="nav-link" href="desenvolvimento.html">Desenvolvimento</a></li>
+          <li class="nav-item"><a class="nav-link" href="praticas.html">Atividades</a></li>
           <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
           <li class="nav-item"><a class="nav-link active" href="autores.html">Autores</a></li>
         </ul>
@@ -54,6 +55,7 @@
     <h1 class="fw-bold mb-4">Autores</h1>
     <ul>
       <li>Sophia Pereira Ozório – Graduanda em Informática Biomédica - USP</li>
+      <li>Prof. Wilson Araújo da Silva Junior - Docente da FMRP</li>
     </ul>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -62,6 +64,7 @@
 
 </body>
 </html>
+
 
 
 
