--- a/referencia.html
+++ b/referencia.html
@@ -42,7 +42,8 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
+          <li class="nav-item"><a class="nav-link" href="desenvolvimento.html">Desenvolvimento</a></li>
+          <li class="nav-item"><a class="nav-link" href="praticas.html">Atividades</a></li>
           <li class="nav-item"><a class="nav-link active" href="referencia.html">Referências</a></li>
           <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
         </ul>
@@ -77,3 +78,4 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
+
