--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -46,11 +46,8 @@
       margin-bottom: 0;
     }
 
-    /* ===== NAVBAR ===== */
-    .navbar {
-      padding: 1rem 0;
-    }
-
+ 
+    /* Navbar */
     .nav-link {
       font-weight: 500;
       margin: 0 1rem;
@@ -193,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
