--- a/fastq.html
+++ b/fastq.html
@@ -110,8 +110,8 @@
 
     <!-- Caixa da Prática 1 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
-      <a href="praticas.html#pratica1">
-        <span>Prática 1</span>
+      <a href="praticas.html#atividade1">
+        <span>Atividade 1</span>
         <span style="font-size: 1.4rem;">➜</span>
       </a>
     </div>
