--- a/trimagem.html
+++ b/trimagem.html
@@ -99,8 +99,8 @@
         
     <!-- Caixa da Prática 2 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
-      <a href="praticas.html#pratica3">
-        <span>Prática 3</span>
+      <a href="praticas.html#atividade3">
+        <span>Atividade 3</span>
         <span style="font-size: 1.4rem;">➜</span>
       </a>
     </div>
