--- a/alinhamento.html
+++ b/alinhamento.html
@@ -124,8 +124,8 @@
         
     <!-- Caixa da Prática 2 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
-      <a href="praticas.html#pratica4">
-        <span>Prática 4</span>
+      <a href="praticas.html#atividade4">
+        <span>Atividade 4</span>
         <span style="font-size: 1.4rem;">➜</span>
       </a>
     </div>
