--- a/index.html
+++ b/index.html
@@ -69,6 +69,27 @@
     p {
       color: #555;
     }
+
+    /* ==== Caixas (Cards) ==== */
+    .step-card {
+      background: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+      padding: 30px 20px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+       /* ocupa quase toda a largura */
+      width: 80vw;          /* 80% da largura da tela */
+      max-width: 1800px;    /* opcional: limita em monitores muito grandes */
+      margin: 20px auto;    /* centraliza e dá espaçamento vertical */
+      height: auto;         /* altura ajustável ao conteúdo */
+      text-align: center;
+    }
+
+    .step-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
+    }
+
   </style>
 </head>
 
@@ -91,6 +112,19 @@
       </div>
     </div>
   </nav>
+
+  <section class="container py-5">
+    <h1 class="text-center fw-bold mb-4">Aprendizagem Baseada em Projetos aplicada ao ensino de graduação</h1>
+    
+    <!-- Objetivos -->
+    <div class="col-md-4 text-center">
+        <div class="step-card">
+          <h5><a href="qc.html">Objetivo</a></h5>
+          <p>Desenvolver um projeto piloto de aprendizagem baseada em projetos voltado à resolução de um problema de pesquisa real.</p>
+        </div>
+      </div>
+
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
