--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <!-- Objetivos -->
     <div class="col-md-4 text-center">
         <div class="step-card">
-          <h5><a href="qc.html">Objetivo</a></h5>
+          <h3>>Objetivo</a></h3>
           <p>Desenvolver um projeto piloto de aprendizagem baseada em projetos voltado à resolução de um problema de pesquisa real.</p>
         </div>
       </div>
