--- a/index.html
+++ b/index.html
@@ -118,11 +118,25 @@
     
     <!-- Objetivos -->
     <div class="col-md-4 text-center">
-        <div class="step-card">
-          <h3 class="card-title">Objetivo</h3>
-          <p>Desenvolver um projeto piloto de aprendizagem baseada em projetos voltado à resolução de um problema de pesquisa real.</p>
-        </div>
+      <div class="step-card">
+        <h4 class="fw-bold mb-4">Objetivo</h4>
+        <p class="text-card">
+          Desenvolver um projeto piloto de aprendizagem baseada em projetos voltado à resolução de um problema de pesquisa real.
+        </p>
       </div>
+    </div>
+    <!-- Metas -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <h4 class="fw-bold mb-4">Metas</h4>
+          <ul>
+            <li>Capacitar os estudantes a desenvolver competências analíticas e investigativas</li>
+            <li>Promover a identificação de mutações com potencial para validação experimental</li>
+            <li>Integrar teoria e prática científica em um contexto real de pesquisa</li>
+            <li>Aplicar os conhecimentos adquiridos à pesquisa translacional, aproximando o aprendizado da prática científica.</li>
+          </ul>
+      </div>
+    </div>
 
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
