--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <!-- Objetivos -->
     <div class="col-md-4 text-center">
       <div class="step-card">
-        <h4 class="fw-bold mb-4">Objetivo</h4>
+        <h4 class="fw-bold mb-4">Objetivo</h4><br>
         <p class="text-card">
           Desenvolver um projeto piloto de aprendizagem baseada em projetos voltado à resolução de um problema de pesquisa real.
         </p>
