--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="col-md-4 text-center">
       <div class="step-card">
         <h4 class="fw-bold mb-4">Metas</h4>
-          <ul>
+          <ul class="metas-list">
             <li>Capacitar os estudantes a desenvolver competências analíticas e investigativas</li>
             <li>Promover a identificação de mutações com potencial para validação experimental</li>
             <li>Integrar teoria e prática científica em um contexto real de pesquisa</li>
