--- a/index.html
+++ b/index.html
@@ -44,16 +44,12 @@
       border-radius: 20px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
       padding: 30px 20px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
       width: 80vw;          /* 80% da largura da tela */
       max-width: 1800px;    /* evita exagero em telas grandes */
       margin: 20px auto;    /* centraliza e dá espaçamento */
       height: auto;
       text-align: center;   /* mantém título e parágrafos centralizados */
-    }
-
-    .step-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
     }
 
     /* Lista das metas — alinhada à esquerda dentro do card */
