--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -115,7 +115,7 @@
       <div class="col-md-4 text-center">
         <div class="step-card">
           <div class="icon-circle">🧩</div>
-          <h5><a href="fastq.html">1. Definição do Problema</a></h5>
+          <h5><a href="problema.html">1. Definição do Problema</a></h5>
           <p>Ponto inicial para o desenvolvimento do projeto.</p>
         </div>
       </div>
@@ -124,7 +124,7 @@
       <div class="col-md-4 text-center">
         <div class="step-card">
           <div class="icon-circle">📕</div>
-          <h5><a href="fastq.html">2. Levantamento da Literatura</a></h5>
+          <h5><a href="literatura.html">2. Levantamento da Literatura</a></h5>
           <p>Pesquisa e revisão de informações sobre o tema, para embasar o desenvolvimento do projeto.</p>
         </div>
       </div>
@@ -184,16 +184,17 @@
       </div>
     </div>
 
-    <!-- Linha final -->
-    <div class="row g-4 justify-content-center mt-2">
-       <!-- Card 9 -->
+      <!-- Card 9 -->
       <div class="col-md-4 text-center">
         <div class="step-card">
           <div class="icon-circle">📑</div>
           <h5><a href="anotacao.html">9. Anotação de Variantes</a></h5>
-            <p>Enriquecimento funcional das variantes.</p>
-          </div>
+          <p>Enriquecimento funcional das variantes.</p>
         </div>
+      </div>
+
+    <!-- Linha final -->
+    <div class="row g-4 justify-content-center mt-2">
 
       <!-- Card 10 centralizado -->
       <div class="col-md-4 offset-md-4 text-center">
@@ -212,6 +213,7 @@
 
 </body>
 </html>
+
 
 
 
