--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -193,11 +193,9 @@
         </div>
       </div>
 
-    <!-- Linha final -->
-    <div class="row g-4 justify-content-center mt-2">
-
       <!-- Card 10 centralizado -->
-      <div class="col-md-4 offset-md-4 text-center">
+      <div class="row justify-content-center g-4 mt-2">
+      <div class="col-md-4 text-center">
         <div class="step-card">
           <div class="icon-circle">📊</div>
           <h5><a href="analise.html">10. Análises</a></h5>
@@ -205,7 +203,7 @@
          </div>
         </div>
       </div>
-
+    
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -213,6 +211,7 @@
 
 </body>
 </html>
+
 
 
 
