--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -165,6 +165,7 @@
         </div>
       </div>
 
+      <div class="row g-4 mt-2 justify-content-center">
       <!-- 7 -->
       <div class="col-md-4 text-center">
         <div class="step-card">
@@ -211,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
