--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -193,6 +193,7 @@
           <p>Enriquecimento funcional das variantes.</p>
         </div>
       </div>
+    </div>
 
       <!-- Card 10 centralizado -->
       <div class="row justify-content-center g-4 mt-2">
@@ -212,6 +213,7 @@
 
 </body>
 </html>
+
 
 
 
