--- a/problema.html
+++ b/problema.html
@@ -91,7 +91,7 @@
         <h3 class="card-title">Como definir:</h3>
         <ul class="card-text">
           <li><strong>Objetivo do estudo:</strong> determinar o que você quer investigar, por exemplo, identificar variantes genéticas associadas a uma doença.</li>
-          <li><strong>Contexto:</strong> dpresentar informações de fundo, como a relevância clínica ou biológica do problema.</li>
+          <li><strong>Contexto:</strong> apresentar informações de fundo, como a relevância clínica ou biológica do problema.</li>
           <li><strong>Escopo:</strong> definir quais amostras ou dados serão analisados (ex.: exoma humano).</li>
           <li><strong>Resultados esperados:</strong> indicar quais conclusões ou insights o estudo pretende fornecer.</li>
         <img 
