--- a/fastq.html
+++ b/fastq.html
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <!-- Caixa da Prática 1 -->
+    <!-- Caixa da atividade 3 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
       <a href="praticas.html#atividade3">
         <span>Atividade 3</span>
