--- a/literatura.html
+++ b/literatura.html
@@ -81,6 +81,7 @@
         <h3 class="card-title">Definição</h3>
         <p class="card-text">
           O levantamento de literatura é o processo de buscar, selecionar e analisar trabalhos científicos, artigos, livros e outros materiais relevantes sobre um determinado tema. Ele permite compreender o estado atual do conhecimento, identificar lacunas, fundamentar hipóteses e apoiar decisões metodológicas no projeto.</p>
+      </div>
     </div>
 
     <!-- Bloco etapas -->
