--- a/trimagem.html
+++ b/trimagem.html
@@ -97,10 +97,10 @@
     </div>
     
         
-    <!-- Caixa da Prática 2 -->
+    <!-- Caixa da atividade 5 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
-      <a href="praticas.html#atividade3">
-        <span>Atividade 3</span>
+      <a href="praticas.html#atividade5">
+        <span>Atividade 5</span>
         <span style="font-size: 1.4rem;">➜</span>
       </a>
     </div>
