--- a/alinhamento.html
+++ b/alinhamento.html
@@ -122,10 +122,10 @@
      </div>
     </div>
         
-    <!-- Caixa da Prática 2 -->
+    <!-- Caixa da atividade 6 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
-      <a href="praticas.html#atividade4">
-        <span>Atividade 4</span>
+      <a href="praticas.html#atividade6">
+        <span>Atividade 6</span>
         <span style="font-size: 1.4rem;">➜</span>
       </a>
     </div>
