--- a/bp.html
+++ b/bp.html
@@ -99,10 +99,10 @@
       </div>
     </div>
         
-    <!-- Caixa da Prática 2 -->
+    <!-- Caixa da atividade 7 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
-      <a href="praticas.html#pratica5">
-        <span>Prática 5</span>
+      <a href="praticas.html#atividade7">
+        <span>Atividade 7</span>
         <span style="font-size: 1.4rem;">➜</span>
       </a>
     </div>
