--- a/anotacao.html
+++ b/anotacao.html
@@ -90,7 +90,7 @@
       <div class="card-body">
         <h3 class="card-title">SnpEff</h3>
         <p class="card-text">
-          Caixa de ferramentas de anotação de variantes genéticas e previsão de efeitos funcionais. Anota e prevê os efeitos de variantes genéticas em genes e proteínas (como alterações de aminoácidos).
+          Caixa de ferramentas para anotação de variantes genéticas e previsão de efeitos funcionais. Anota e prevê os efeitos de variantes genéticas em genes e proteínas (como alterações de aminoácidos).
         </p>
         <h3 class="card-title">SnpSift</h3>
         <p class="card-text">
