--- a/anotacao.html
+++ b/anotacao.html
@@ -94,7 +94,7 @@
         </p>
         <h3 class="card-title">SnpSift</h3>
         <p class="card-text">
-          O SnpSift é uma ferramenta que anota variantes genômicas usando bancos de dados, filtros e manipula variantes genômicas anotadas. <br>
+          O SnpSift é uma ferramenta que anota variantes genômicas usando bancos de dados, filtros e manipula variantes genômicas anotadas.<br><br>
           💡 Depois de anotar seus arquivos usando o SnpEff, você pode usar o SnpSift para ajudar a filtrar grandes conjuntos de dados genômicos a fim de encontrar as variantes mais significativas para seu experimento.
         </p>
       </div>
