--- a/anotacao.html
+++ b/anotacao.html
@@ -88,15 +88,14 @@
     <!-- Bloco SnpEff -->
     <div class="card p-4">
       <div class="card-body">
-        <h3 class="card-title">SnpEff</h3>
-        <p class="card-text">
-          Caixa de ferramentas para anotação de variantes genéticas e previsão de efeitos funcionais. Anota e prevê os efeitos de variantes genéticas em genes e proteínas (como alterações de aminoácidos).
-        </p>
-        <h3 class="card-title">SnpSift</h3>
-        <p class="card-text">
-          O SnpSift é uma ferramenta que anota variantes genômicas usando bancos de dados, filtros e manipula variantes genômicas anotadas.<br><br>
-          💡 Depois de anotar seus arquivos usando o SnpEff, você pode usar o SnpSift para ajudar a filtrar grandes conjuntos de dados genômicos a fim de encontrar as variantes mais significativas para seu experimento.
-        </p>
+        <h3 class="card-title">Ferramentas</h3>
+        <ul class="card-text">
+          <li><strong>SnpEff:</strong> caixa de ferramentas para anotação de variantes genéticas e previsão de efeitos funcionais. Anota e prevê os efeitos de variantes genéticas em genes e proteínas (como alterações de aminoácidos).</li>
+          <li><strong>SpnSift:</strong> é uma ferramenta que anota variantes genômicas usando bancos de dados, filtros e manipula variantes genômicas anotadas.</li>
+          <p>💡 Depois de anotar seus arquivos usando o SnpEff, você pode usar o SnpSift para ajudar a filtrar grandes conjuntos de dados genômicos a fim de encontrar as variantes mais significativas para seu experimento.
+          </p>
+          <li><strong>Outras ferramentas:</strong>Annovar e VEP Ensembl</li>
+        </ul>
       </div>
     </div>
    
